# learning-aiml

./: .gitignore  Agentic system design.md  README.md  SOLID principles.md  algorithms.ipynb  approaching a DSA problem.md  arrays.md  arrays_practice.ipynb  big_0.md  data_structures.ipynb  requirements.txt  trees.md
Celery/: celery.ipynb
HLD/: approach.md
LLD/: approach.md
LangGraph/: Other big decisions.md  agent.py  capability.md  features.md  metrics.md
LangGraph/subagents/orders/: agent.py  chain.py  llm.py  mcp_client.py  notes.md  prompts.yaml  routers.py  state.py  testing.ipynb  utils.py
LangGraph/subagents/orders/mcp/: mcp_server.py  testing.ipynb
MAF/: explorations.ipynb  observations.md
MCP/: mcp.ipynb  pyproject.toml  server.py
RabbitMQ/: README.md  docker-compose.yml  rabbitmq.ipynb
Redis/: README.md  docker-compose.yml  redis.ipynb
crewAI/: exploration.ipynb  learnings.md
fastAPI/: app.py  scratchpad.ipynb
