[tool.poetry]
name = "MCP-DEMO"
version = "0.1.0"
description = "MCP demo"
authors = ["Anupam Misra <anupamisra1995@gmail.com>"]
readme = "README.md"
# package-mode setting removed (unsupported by current isort)

[tool.poetry.dependencies]
python = "^3.13"

# LLM orchestration
langchain = "1.1.3"

# Utilities
python-dotenv = "1.2.0"
httpx = "0.28.1"
pydantic = "2.12.5"
mcp = {extras = ["cli"], version = "^1.25.0"}
fastmcp = "^2.14.2"

[tool.poetry.dev-dependencies]
pytest = "9.0.0"
black = "^24.1"
ruff = "0.14.10"
isort = "7.0.0"
mypy = "^1.19"
pre-commit = "4.5.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"


[tool.ruff]
line-length = 120
extend-select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

